# aso

./: .gitignore  README.md
hs_exoskeleton/: CMakeLists.txt  CMakePresets.json  hs_exoskeleton.cpp  test.cpp
hs_exoskeleton/Data/Desired Trajectory/: acceleration.txt  dq_tese_rad.txt  offline_hip_data.txt  position.txt  q_test_rad.txt  velocity.txt
hs_exoskeleton/analysis/: plot_ao_results.py
hs_exoskeleton/include/: Constants.h  Macro.h  Timer.h  UnitConv.h
hs_exoskeleton/include/Controller_H/: Controller.h  PIDController.h
hs_exoskeleton/include/DataManager_H/: DataRecorder.h  TEXTIO.h
hs_exoskeleton/include/Kvaser_H/: CANMessage.h  KvaserBase.h  Motor.h  kvaser.h  motors.h
hs_exoskeleton/include/Robot_H/: selfDevManuipulator.h
hs_exoskeleton/include/Trajectory_H/: Sinusoid.h  Trajectory.h  TrajectorySequence.h  aso.h
hs_exoskeleton/output/AO/Output/: ao_log.txt
hs_exoskeleton/output/PIDController/Output/: Ud.txt  Ui.txt  Up.txt
hs_exoskeleton/output/Robot Status/: dq.txt  q.txt
hs_exoskeleton/src/: Timer.cpp
hs_exoskeleton/src/Kvaser_CPP/: KvaserBase.cpp  kvaser.cpp
